<resources>
    <string name="app_name">Aspirin</string>
    <string name="splash_logo">splash logo</string>
    <string name="login_title">Login</string>
    <string name="daftar_title">Register</string>
    <string name="login_with_google">Masuk Dengan Google</string>
    <string name="manual_login_message">atau Masuk dengan Email Anda</string>
    <string name="nama_pengguna">Nama Pengguna</string>
    <string name="email">Email</string>
    <string name="password">Kata Sandi</string>
    <string name="forgot_password">Lupa Kata Sandi?</string>
    <string name="sudah_memiliki_akun">Sudah memiliki akun?&#160;</string>
    <string name="masuk">Masuk</string>
    <string name="title_activity_sosial_media">SosialMediaActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="lokasi">Lokasi</string>
    <string name="akhdan_pangestuaji">Akhdan Pangestuaji</string>
    <string name="hint_tanggal_posting">Di posting 22 Maret 2021</string>
    <string name="hint_lokasi_posting">Purwokerto, Banyumas</string>
    <string name="ceita">Ceita</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tambah_aspirasi">tambah aspirasi</string>
    <string name="judul_kegiatan">Judul Kegiatan</string>
    <string name="deskripsi_kegiatan">Deskripsi Kegiatan</string>
    <string name="tambahkan_lokasi">Tambahkan Lokasi</string>
    <string name="dont_have_account">Belum Memiliki Akun?&#160;</string>
    <string name="kirim">Kirim</string>
    <string name="judul_kosong">Judul harus diisi</string>
    <string name="deskripsi_kosong">Deskripsi harus diisi</string>
    <string name="lokasi_kosong">Lokasi harus diisi</string>
    <string name="google_icon">google_icon</string>
    <string name="exit_button">exit_button</string>
    <string name="teke_picture">teke_picture</string>
    <string name="rotate_camera">rotate_camera</string>
    <string name="my_location_button">my_location_button</string>
    <string name="enable_location_button">enable_location_button</string>
    <string name="icon_location">icon_location</string>
    <string name="tempat_kegiatan">Tempat kegiatan</string>
    <string name="photo_image">photo_image</string>
    <string name="tulis_comment">Tulis comment…</string>
    <string name="tentang_aplikasi">Tentang Aplikasi</string>
    <string name="aspirin_pembuka">Aspirin merupakan aplikasi berbasis Android di bidang lingkungan dan sosial. Aplikasi ini memiliki tujuan, memberi kesadaran terhadap masyarakat tentang kepedulian keadaan di sekitar, sehingga masyarakat dapat berpartisipasi dalam menyampaikan aspirasi guna berkontribusi kepada daerah.</string>
    <string name="daftar_fitur">Daftar Fitur</string>
    <string name="deskripsi_fitur">- Login dan register Login ini digunakan untuk identifikasi pengguna, dan register sendiri digunakan untuk membuat akun Aspirin. \n\n- Postingan Digunakan untuk menampilkan aspirasi pengguna dan berbagi kepada pengguna lain. \n\n- Maps Fitur opsional yang dapat dimanfaatkan pengguna untuk berbagi lokasi mengenai aspirasi yang telah dibagikan</string>
    <string name="kebijakan_privasi">Kebijakan Privasi</string>
    <string name="deskripsi_privasi">Aspirin berkomitmen untuk menghormati dan melindungi privasi Anda. Kami memahami betapa pentingnya data pribadi Anda dan kami tidak akan membagikannya kepada orang-orang atau pihak ketiga lainnya tanpa izin Anda. Silakan baca Kebijakan Privasi berikut untuk mempelajari lebih lanjut tentang bagaimana kami akan menjunjung tinggi janji kami kepada Anda. \n\nKebijakan ini menjelaskan bagaimana kami mengumpulkan, menggunakan, dan mengungkapkan data pribadi Anda yang kami peroleh saat Anda menggunakan Aspirin. Dengan terus menggunakan atau mengakses aplikasi kami, itu berarti Anda telah menerima praktik-praktik yang diuraikan dalam Kebijakan ini.</string>
    <string name="informasi_privasi">Informasi yang Kami Akses dan Kumpulkan</string>
    <string name="deskripsi_informasi_privasi"><b>Informasi Akun:</b> Dengan membuat akun di Aspirin, Anda sudah memberikan email. Informasi lainnya seperti nama, foto profil, dan lokasi juga dapat dilihat dan disimpan oleh kami. \n\n<b>Koneksi:</b> Untuk membantu Anda dalam menemukan berbagai informasi mengenai aspirasi berdasarkan lokasi, dan juga untuk berinteraksi dengan pengguna lain melalui postingan. \n\n<b>Data dari Pengaturan Perangkat Seluler:</b> Kami memperoleh informasi yang Anda izinkan lalu kami terima seperti akses ke kamera atau foto dan lokasi Anda untuk menggunakan fitur layanan kami.</string>
    <string name="data_pengguna">Data Pengguna</string>
    <string name="deskripsi_data_pengguna">Kami menyimpan informasi di server yang berlokasi di Asia Tenggara. Kami bekerja dengan pihak ketiga untuk menyediakan berbagai layanan terkait teknologi. Data percakapan kamu tidak dibagikan dengan perusahaan atau layanan lain manapun. Data postingan kamu secara aman disimpan dan tidak digunakan untuk kepentingan apapun selain pengembangan aplikasi.</string>
    <string name="persyaratan_layanan">Persyaratan Layanan</string>
    <string name="registrasi">Registrasi</string>
    <string name="deskripsi_registrasi">Anda harus mendaftar untuk menggunakan layanan kami menggunakan data yang akurat serta memberikan email Anda saat ini.</string>
    <string name="umur">Umur</string>
    <string name="deskripsi_umur">Usia minimal untuk menggunakan layanan kami adalah 18 tahun.</string>
    <string name="perangkat_seluler_dan_perangkat_lunak">Perangkat Seluler dan Perangkat Lunak</string>
    <string name="deskripsi_perangkat">Anda harus menyediakan perangkat seluler, perangkat lunak, dan koneksi data tertentu untuk menggunakan layanan kami, yang tidak kami sediakan.</string>
    <string name="perubahan_kebijakan_privasi_kami">Perubahan Kebijakan Privasi Kami</string>
    <string name="deskripsi_perubahan_kebijakan">Kami dapat mengubah atau merevisi Kebijakan Privasi. Setiap perubahan pada Kebijakan Privasi ini akan menjadi efektif ketika kami mengumumkan versi revisi melalui aplikasi Aspirin #AspirasiIndonesia. Kami sangat menganjurkan Anda untuk mengakses aplikasi kami secara berkala agar mengetahui perubahan-perubahan terbaru. Dengan terus mengakses dan menggunakan layanan Aspirin, Anda dianggap telah menerima dan menyetujui segala perubahan.</string>
    <string name="image_comment">image_comment</string>
    <string name="komentar">Komentar</string>
    <string name="story_image">story_image</string>
    <string name="login">Login/ Register</string>
    <string name="forgot_passwd">Lupa Password</string>
    <string name="reset_password_message">Masukan email yang sudah terdaftar untuk mengganti password</string>
    <string name="reset_password">Ganti Password</string>
    <string name="privacy_policy">Dengan mengunakan aplikasi Aspirin ada telah menyetujui kebijakan privasi dari aplikasi Aspirin</string>
    <string name="privacy_policy_link">https://sites.google.com/view/aspirinprivacypolicy/home</string>
    <string name="click_privacy_policy">kebijakan privasi</string>
</resources>