<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

   <LinearLayout
       android:layout_width="match_parent"
       android:orientation="vertical"
       android:layout_height="wrap_content">
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/kebijakan_privasi"
           android:textSize="24sp"
           android:textStyle="bold" />

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="8dp"
           android:text="@string/deskripsi_privasi"
           android:textSize="16sp"/>

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/informasi_privasi"
           android:layout_marginTop="16dp"
           android:textSize="20sp"
           android:textStyle="bold" />

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="8dp"
           android:text="@string/deskripsi_informasi_privasi"
          android:textSize="16sp"/>

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/data_pengguna"
           android:layout_marginTop="16dp"
           android:textSize="20sp"
           android:textStyle="bold" />

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="8dp"
           android:text="@string/deskripsi_data_pengguna"
           android:textSize="16sp"/>

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/persyaratan_layanan"
           android:layout_marginTop="16dp"
           android:textSize="20sp"
           android:textStyle="bold" />

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/registrasi"
           android:layout_marginTop="16dp"
           android:textSize="18sp"
           android:textStyle="bold" />

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="8dp"
           android:text="@string/deskripsi_registrasi"
           android:textSize="16sp"/>

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/umur"
           android:layout_marginTop="16dp"
           android:textSize="18sp"
           android:textStyle="bold" />

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="8dp"
           android:text="@string/deskripsi_umur"
           android:textSize="16sp"/>

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/perangkat_seluler_dan_perangkat_lunak"
           android:layout_marginTop="16dp"
           android:textSize="18sp"
           android:textStyle="bold" />

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="8dp"
           android:text="@string/deskripsi_perangkat"
           android:textSize="16sp"/>

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/perubahan_kebijakan_privasi_kami"
           android:layout_marginTop="16dp"
           android:textSize="18sp"
           android:textStyle="bold" />

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="8dp"
           android:text="@string/deskripsi_perubahan_kebijakan"
           android:textSize="16sp"/>

   </LinearLayout>


</ScrollView>
